Adicionar o header responsivo.

--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -2,6 +2,7 @@
 @import "reset";
 @import "variables-and-mixins";
 @import "global";
+@import "grid";
 
 // Import dos componentes
 @import "button";
