--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -6,13 +6,16 @@
 
   background-color: $brand-color-primary-01;
   color: $overlay-white-01;
-
   @include type(xs, 400);
-
   div {
     display: flex;
     align-items: center;
     gap: 8px;
+    @include device(s) {
+      &:nth-child(even) {
+        display: none;
+      }
+    }
   }
 }
 
@@ -20,9 +23,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
   padding: 16px 46px;
-
   .logo {
     cursor: pointer;
   }
@@ -31,31 +32,47 @@
 .nav {
   display: flex;
   gap: 24px;
-
   ul {
     display: flex;
     align-items: center;
     gap: 8px;
-
     li {
       @include type(xs, 500);
-
       padding: 12px 8px;
       cursor: pointer;
-
       &:nth-child(-n + 2) {
         display: flex;
         align-items: center;
         gap: 4px;
-
         padding: 8px 10px;
       }
     }
   }
-
   div {
     display: flex;
     gap: 8px;
+  }
+}
+
+@include device(m) {
+  .mobile-menu {
+    display: flex;
+    justify-content: space-between;
+    padding: 18px 16px;
+    .primary-btn {
+      font-family: "SF Pro Display", sans-serif;
+      border: none;
+      border-radius: 40px;
+
+      cursor: pointer;
+      background-color: $brand-color-primary-01;
+      color: $overlay-white-01;
+      @include type(xs, 400);
+      transition: ease-in-out 0.5s;
+      &:hover {
+        background-color: $brand-color-primary-02;
+      }
+    }
   }
 }
 
