Adicionar a hero section do site.

--- a/css/scss/_button.scss
+++ b/css/scss/_button.scss
@@ -9,7 +9,7 @@
   border-radius: 40px;
   cursor: pointer;
 
-  @include type(xs, 400);
+  @include type-text(xs);
 }
 
 // ****** Estilos do botão primário ******
