--- a/css/scss/_general.scss
+++ b/css/scss/_general.scss
@@ -16,7 +16,7 @@
       object-position: center;
     }
   }
-  .content {
+  .main-content {
     width: 100%;
     height: 100%;
     background: linear-gradient(
@@ -101,5 +101,110 @@
   p {
     color: $neutral-color-05;
     @include type-text(base);
+  }
+}
+
+// ****** Loading ******
+.loading-section {
+  width: 100%;
+  background-color: $overlay-dark-02;
+  position: relative;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  &::after {
+    content: "";
+    position: absolute;
+    width: 80%;
+    height: 100%;
+    background: url("../../src/assets/Smoke.png") center no-repeat;
+    background-position: bottom left;
+    @include device(m) {
+      width: 100%;
+    }
+  }
+  @include device(m) {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.loading-column-left {
+  border-right: 1px solid $neutral-color-07;
+}
+
+.loading-information {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  padding: 123px 0 98px 0;
+  background-image: url("../../src/assets/Waves.svg");
+  border-bottom: 1px solid $neutral-color-07;
+  span {
+    color: $neutral-color-02;
+    &:nth-child(1) {
+      @include type-text(lg);
+    }
+    &:nth-child(2) {
+      @include type-heading(h1);
+      font-weight: 500;
+      margin-bottom: 4px;
+    }
+    &:nth-child(3) {
+      font-family: "Poppins", sans-serif;
+      font-size: 1.125rem;
+      font-weight: 600;
+      color: $brand-color-primary-01;
+    }
+  }
+}
+.loading-description {
+  display: flex;
+  justify-content: center;
+  p {
+    @include type-text(lg);
+    color: $neutral-color-03;
+    padding: 123px 0;
+    max-width: 600px;
+  }
+}
+
+.loading-cta {
+  position: relative;
+  padding: 179px 0 0 64px;
+  display: flex;
+  flex-direction: row;
+  z-index: 1;
+  div {
+    @include device(m) {
+      padding: 46px 16px;
+      margin-bottom: 199px;
+    }
+  }
+  img {
+    &:nth-child(1) {
+      margin-bottom: 8px;
+    }
+  }
+  p {
+    @include type-text(base);
+    color: $neutral-color-03;
+    margin-bottom: 24px;
+    max-width: 340px;
+    span {
+      color: $brand-color-primary-01;
+    }
+  }
+  .primary-icon-btn {
+    @include primary-icon(l);
+    background-color: $brand-color-primary-01;
+  }
+  .loader-image {
+    position: absolute;
+    right: 48px;
+    @include device(m) {
+      bottom: -64px;
+    }
   }
 }
