--- a/css/scss/_general.scss
+++ b/css/scss/_general.scss
@@ -162,11 +162,18 @@
 .loading-description {
   display: flex;
   justify-content: center;
+  @include device(m) {
+    border-bottom: 1px solid $neutral-color-07;
+  }
   p {
     @include type-text(lg);
     color: $neutral-color-03;
     padding: 123px 0;
     max-width: 600px;
+    @include device(m) {
+      padding: 46px 16px;
+      @include type-text(base);
+    }
   }
 }
 
@@ -176,6 +183,9 @@
   display: flex;
   flex-direction: row;
   z-index: 1;
+  @include device(m) {
+    padding: 46px 16px;
+  }
   div {
     @include device(m) {
       padding: 46px 16px;
